v2.7.2   - Bug fixed a warning in running CTL with ICC preferred.
	 - Added ACES utilities to distribution: ctlrender, exr_dpx_exr and
	   exrdpx.
	 - Made color picker with LUT work in real time.
	 - Removed the preference switch to show colors in pixel toolbar.
	 - Added showing color of LUT in Color Area Information Window.

v2.7.1   - With NSIS exe installer, made Windows' icons show the version 
	   number.
	 - Bug fixed CTL Look Modulation Transform Picker.
	 - Bug fixed libACESclip to use linkTransform instead of name
	   when available. Made reader/writer use TransformID instead of name.
	 - Bug fixed RPM installer not creating ln -s /usr/bin/mrViewer
	   correctly.
	 - Color picker now can show colors with the LUT applied.  This 
	   makes the gui (zoom) respond a tad slower when the LUT is on.
	   As such a preferences option was added.
	 - Added switch in Preferences to show pixel color values after LUT.
	 - Made DEB/RPM installer on Linux place an icon in desktop in
	   any language locale.
	 - DEB/RPM will register file associations (mime-types) to all of
	   mrViewer's recognized files.
	 - Added translation to Spanish when that's the locale default.
	 - Updated libACESclip to new format according to Jim Houston.

v2.7.0   - Added ACEScsc files as IDTs to support DigitalLAD sample picture.
	 - Made xml and ctl files never show as sequences of frames in
	   file requester.
	 - On Linux, now mrViewer is added to the system path thru a symlink.
	 - On Linux, mrViewer is added to the menus (Graphic) if run from the
	   deb or rpm file.
	 - Added Mirror Horizontal and Vertical to Image RMB popup menu.
	 - Added baking CTL/ICC transforms to a 96x96x96 grid.
	 - Removed Load button from CTL requester as it was not working right.
	 - Resolved a quoting issue in mrViewer.sh to work with parameters
	   with spaces.
	 - Bug fixed parsing of hotkeys when some ctrl, alt or meta keys were
	   combined.
	 - Bug fixed CTL pipeline when CTL file is not found.